Bug fix for footer placement on mobile devices.

--- a/public/less/media-queries.less
+++ b/public/less/media-queries.less
@@ -8,9 +8,13 @@
 		position: relative;
 	}
 
-	#main-content .container {
-		padding-top: 0;
-		padding-bottom: 0;
+	#main-content {
+		height: auto;
+
+		.container {
+			padding-top: 0;
+			padding-bottom: 0;
+		}
 	}
 
 }
